# Triadix

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_triadix.py  calibrate_coherence.py  deep_nuclear_test.py  nuclear_test.py  ultra_nuclear_test.py
benchmarks/results/: ultra_nuclear_test.json
docs/: http_flow.md  overview.md
examples/: basic_run.py  checkpoint_demo.py  http_end_to_end_demo.py  http_node_sync_demo.py  identity_peer_demo.py  mempool_demo.py  node_sync_demo.py  persistence_demo.py  policy_sync_demo.py  queued_gap_demo.py  receipt_demo.py  selection_demo.py  signed_transaction_demo.py  transport_demo.py
manifest/: triadix_manifest_v1_2.json
scripts/: bootstrap.ps1  run_http_demo.ps1  run_node_8001.ps1  run_node_8002.ps1  triadix_all_one_v1_2.ps1
src/triadix/: cli.py
src/triadix/core/: api.py  engine.py  hashes.py  http_client.py  metrics.py  node.py  orchestrator.py  policy.py  server.py  transactions.py  wallet.py
src/triadix/models/: block.py  node.py  receipt.py
src/triadix/utils/: config.py
src/triadix/visualization/: plots.py
tests/: test_api_enhanced.py  test_api_transport.py  test_benchmark_sanity.py  test_block_admission.py  test_checkpoint.py  test_engine.py  test_hashes.py  test_health_policy.py  test_identity.py  test_mempool.py  test_metrics.py  test_node_sync.py  test_orchestrator.py  test_persistence.py  test_policy.py  test_queued_gap.py  test_receipts.py  test_selection.py  test_status_report.py  test_transactions.py  test_transport_layer.py
